<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SchoolTime</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="city">City</string>
    <string name="widget">Widget</string>

    <string name="schedule">Schedule</string>
    <string name="subject_list">Subjects</string>
    <string name="class_list">Classes</string>

    <string name="long_name">Long name</string>
    <string name="short_name">Short name</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="school_class">Class</string>
    <string name="school_subject">Subject</string>
    <string name="day_of_week">Day of Week</string>
    <string name="schedule_block">Schedule Block</string>
    <string name="name_exists">This name already exists</string>
    <string name="name_empty">Please specify a name</string>
    <string name="pick_bg_color">Pick background color</string>
    <string name="pick_color">Pick color</string>
    <string name="background">Background</string>
    <string name="foreground">Foreground</string>
    <string name="invalid_hex">Invalid hexadecimal color</string>
    <string name="color_wheel">Color wheel</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
    <string name="duration">Duration</string>
    <string name="unnamed">Unnamed</string>
    <string name="unnamed_small">UN</string>
    <string name="transparency">Transparency</string>

    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>

    <string name="appearance">Appearance</string>

    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow system</string>

    <string name="widget_weather_icon">Weather</string>
    <string name="widget_edit_icon">Edit</string>
    <string name="widget_no_icon">None</string>

    <string name="weekend_school">Show weekends</string>
    <string name="lock_duration">Lock duration by default</string>
    <string name="location">Location</string>
    <string name="hide_weather_icon">Hide weather icon</string>
    <string name="open_link">Open link on double tap</string>
    <string name="customization">Customization</string>
    <string name="customize">Customize</string>
    <string name="show_end_of_school_msg">Show end of school message</string>
    <string name="icon_type">Icon type</string>
    <string name="import_hdvt_file">Import HDVT File</string>
    <string name="export_hdvt_file">Export HDVT File</string>
    <string name="import_export_hdvt_file">Import/Export HDVT File</string>
    <string name="save_widget_customization">Save Customization</string>
    <string name="save_success">Saved Successfully</string>
    <string name="save_fail">Failed Saving!</string>
    <string name="save">Save</string>

    <string name="before_subject">Before subject</string>
    <string name="during_subject">During subject</string>
    <string name="end_of_school">End of the school</string>
    <string name="free_day">Free day</string>
    <string name="fallback_end_of_school_msg">Classes are over for today!&lt;br&gt;Congratulations! 🎆</string>

    <!--    "<b>%s</b> starts in <b>%d %s</b>"-->
    <!--    PT starts in 5 minutes-->
    <string name="widget_subject_starting">&lt;b&gt;%s&lt;/b&gt; starts in &lt;b&gt;%d %s&lt;/b&gt;</string>
    <!--    "<b>%02d:%02d</b> until <b>%s</b> ends"-->
    <!--    2:50 until PT ends-->
    <string name="widget_subject_ending_hours">&lt;b&gt;%02d:%02d&lt;/b&gt; until &lt;b&gt;%s&lt;/b&gt; ends</string>
    <!--    "<b>%d %s</b> until <b>%s</b> ends"-->
    <!--    5 minutes until PT ends-->
    <string name="widget_subject_ending_minutes">&lt;b&gt;%d %s&lt;/b&gt; until &lt;b&gt;%s&lt;/b&gt; ends</string>
</resources>