<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.vtec.schooltime.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_class_list"
        android:name="com.vtec.schooltime.ui.class_list.ClassListFragment"
        android:label="@string/class_list"
        tools:layout="@layout/fragment_class_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.vtec.schooltime.ui.settings.SettingsFragment"
        android:label="@string/settings" />

</navigation>