<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main" />

    <include
        android:id="@+id/display_card"
        layout="@layout/universal_card"
        style="@style/SmallCard"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_class"
            android:layout_marginBottom="10dp"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/class_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_bg_color"
            android:layout_marginBottom="5dp"
            style="@style/TextAppearance.MaterialComponents.Body2"/>

        <com.vtec.schooltime.ColorPickerSeekBar
            android:id="@+id/red_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"/>

        <com.vtec.schooltime.ColorPickerSeekBar
            android:id="@+id/green_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_light"/>

        <com.vtec.schooltime.ColorPickerSeekBar
            android:id="@+id/blue_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="#"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hex_color_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:inputType="textNoSuggestions"/>

            </LinearLayout>

            <Button
                android:id="@+id/color_wheel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_wheel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>